# brave-browser

./: package-lock.json
.github/workflows/: linux-cross-build.yml  windows-build.yml
docs/: IMPLEMENTATION_COMPLETE.md  implementation-summary.sh  tab-focus-local-model.md  verify-privacy.sh
docs/examples/: README.md  local_model_classifier.cc  local_model_classifier.h  local_model_classifier_unittest.cc  pref_names.h  tab_classifier.h  tab_focus_local_model_settings.tsx
docs/examples/immersive_fullscreen/: BUILD.gn  README.md  event_handlers.js  immersive_fullscreen.css  immersive_fullscreen_controller.cc  immersive_fullscreen_controller.h  immersive_fullscreen_controller_unittest.cc  immersive_fullscreen_settings.tsx  pref_names.h
